Updated devices css and html to make it responsive. Fixed navbar spacing

--- a/css/devices.css
+++ b/css/devices.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 h1 {
 	color: black;
 }
@@ -17,29 +13,29 @@ p {
 
 .container {
 
-	/*display: inline-block;*/
-	width: 35%;
-	border: 2px solid blue;
-	margin:10px;
-	font-size: 3vw;
-	color: white;
-	background: #0066cc;
-	padding-right: 10px;
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-bottom: 10px;
+	font-size: 2.9vw;
+
 }
 .promo{
-	text-align: center;
-	padding-top: 60px;
+	padding-top: 3%;
+	padding-left: 7%;
+	padding-right: 7%;
+	padding-bottom: 5%;
 }
 .container a:visited{
-	color: white;
+	color: black;
 }
 .container a:hover{
 	color: black;
 }
 .device_icons {
-
-	max-width: 100%
+	padding-top: 1vw;
+	/*max-width: 100%;*/
+}
+#vwtitle h1{
+	font-size: 5vw;
+}
+#path{
+	padding-top: 1vw;	
+	font-size: 1.7vw;
 }
